syntax = "proto3";

package proto;

enum ServiceRole {
  UNKNOWN_ROLE = 0;
  META = 1;
  GRAPH = 2;
  STORAGE = 3;
}

enum Status {
  UNKNOWN_STATUS = 0;
  RUNNING = 1;
  EXITED = 2;
}

message StartServiceRequest {
  ServiceRole role = 1;
  string dir = 2;
}

message StartServiceResponse {}

message StopServiceRequest {
  ServiceRole role = 1;
  string dir = 2;
}

message StopServiceResponse {}

message ServiceStatusRequest {
  ServiceRole role = 1;
  string dir = 2;
}

message ServiceStatusResponse { Status status = 1; }

message BanReadWriteRequest {
  ServiceRole role = 1;
  string addr = 2;
}

message BanReadWriteResponse {}

message AllowReadWriteRequest {
  ServiceRole role = 1;
  string addr = 2;
}

message AllowReadWriteResponse {}

message DataPlayBackRequest {
  string dir = 1;
  string data_path = 2;
  string meta_addr = 3;
}

message DataPlayBackResponse {}

message StopAgentRequest {}

message StopAgentResponse {}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}

service AgentService {
  rpc StartService(StartServiceRequest) returns (StartServiceResponse);
  rpc StopService(StopServiceRequest) returns (StopServiceResponse);
  rpc ServiceStatus(ServiceStatusRequest) returns (ServiceStatusResponse);

  rpc BanReadWrite(BanReadWriteRequest) returns (BanReadWriteResponse);
  rpc AllowReadWrite(AllowReadWriteRequest) returns (AllowReadWriteResponse);

  rpc DataPlayBack(DataPlayBackRequest) returns (DataPlayBackResponse);

  rpc StopAgent(StopAgentRequest) returns (StopAgentResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

}
